Primarily replacing invocations of {@code new Xxx( v )} with {@code Xxx.valueOf( v )} where Xxx is a wrapper class like Integer.
Various fairly minor cleanup elsewhere.

This software already compiles and seems to work just fine under Java 10.